--- a/youtube-remake/css/main.css
+++ b/youtube-remake/css/main.css
@@ -111,6 +111,16 @@ header{
   left:0%;
   z-index: 2;
 }
+header div{
+  display: inline-block;
+  width: 30px;
+	height: 30px;
+	background: grey;
+	-moz-border-radius: 50px;
+	-webkit-border-radius: 50px;
+	border-radius: 50px;
+  margin-right: 15%;
+}
 header span{
   margin-left: 3%;
 }
@@ -121,9 +131,19 @@ header img{
 }
 header a{
   color: grey;
+  margin-right: 15%;
+}
+header button{
+  background-color: rgb(241, 241, 241);
+  margin-right: 15%;
 }
 header input{
   width: 40%;
+}
+header section{
+  float: right;
+  width: 18%;
+  margin-right: 1%;
 }
 aside{
   background-color: white;
@@ -132,6 +152,8 @@ aside{
   border-right: 1px solid rgb(241, 241, 241);
   position: fixed;
   top:7.5%;
+  bottom: 0%;
+  overflow-y: auto;
 }
 aside h4{
   color: rgb(204,24,30);
