--- a/youtube-remake/css/main.css
+++ b/youtube-remake/css/main.css
@@ -120,6 +120,8 @@ header div{
 	-webkit-border-radius: 50px;
 	border-radius: 50px;
   margin-right: 15%;
+  position: fixed;
+  top:1%;
 }
 header span{
   margin-left: 3%;
@@ -143,6 +145,7 @@ header input{
 header section{
   float: right;
   width: 18%;
+  margin-top: 1%;
   margin-right: 1%;
 }
 aside{
@@ -168,7 +171,7 @@ aside .current{
   color: white;
 }
 aside ul li{
-    margin: 1% 16% 1% 0%;
+    margin: 1% 16% 4% 0%;
     text-indent: 10%;
     font-size: 90%;
 }
@@ -257,9 +260,23 @@ footer a{
   color: black;
   text-decoration: none;
 }
-
-
-
+.buttons li{
+  margin: 0% .5%;
+}
+.small li{
+  font-size: 75%;
+  font-weight: bold;
+  margin: 0% 1%;
+}
+.tiny li{
+  font-size: 65%;
+  color: grey;
+  margin: 0% 1%;
+}
+.tiny a{
+  font-size: 105%;
+  color: grey;
+}
 
 
 
